--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Mingzhu Liu
 # description: the profile of an engineer, researcher and software developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/profile.jpg
+avatar: liumingzhu/images/profile.jpg
 
 #
 # Flags below are optional
